Renaming timeseries mapping `participant` column naming to `asset`.