@@ -8,16 +8,13 @@ package edu.ie3.datamodel.io.factory.timeseries;
 import edu.ie3.datamodel.io.factory.EntityData;
 import edu.ie3.datamodel.io.factory.EntityFactory;
 import edu.ie3.datamodel.io.source.TimeSeriesMappingSource;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class TimeSeriesMappingFactory
     extends EntityFactory<TimeSeriesMappingSource.MappingEntry, EntityData> {
-  private static final String PARTICIPANT = "participant";
+  private static final String ASSET = "asset";
   private static final String TIME_SERIES = "timeSeries";
 
   public TimeSeriesMappingFactory() {
@@ -26,14 +23,13 @@ public class TimeSeriesMappingFactory
 
   @Override
   protected List<Set<String>> getFields(Class<?> entityClass) {
-    return Collections.singletonList(
-        Stream.of(PARTICIPANT, TIME_SERIES).collect(Collectors.toSet()));
+    return List.of(newSet(ASSET, TIME_SERIES));
   }
 
   @Override
   protected TimeSeriesMappingSource.MappingEntry buildModel(EntityData data) {
-    UUID participant = data.getUUID(PARTICIPANT);
+    UUID asset = data.getUUID(ASSET);
     UUID timeSeries = data.getUUID(TIME_SERIES);
-    return new TimeSeriesMappingSource.MappingEntry(participant, timeSeries);
+    return new TimeSeriesMappingSource.MappingEntry(asset, timeSeries);
   }
 }
